<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:theme="@style/NavigationDrawerStyle">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/app_name"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_scrollFlags="scroll|enterAlways"/>

            <!--<android.support.v7.widget.SearchView
                android:id="@+id/autoSearch"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:searchIcon="@drawable/search_icon"
                android:textSize="@dimen/item_text_size"
                android:clickable="true"
                android:background="@drawable/text_field_outline_back"/>-->

            <RelativeLayout
                android:id="@+id/searchLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:id="@+id/searchBar"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/text_field_outline_back"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight=".8"
                        android:layout_height="match_parent"
                        android:src="@drawable/search_icon"
                        android:contentDescription="@string/loading"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="4.2"
                        android:gravity="center_vertical"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/main_header"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/searchText"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/frame_contain"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/layout_back"
                    android:orientation="vertical"
                    android:weightSum="3"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2.2"
                        android:weightSum="5"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight=".8"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:weightSum="5">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1.5"
                                android:contentDescription="@string/loading"
                                android:src="@drawable/ic_map_from_"/>

                            <View
                                android:layout_width="1dp"
                                android:layout_height="0dp"
                                android:layout_weight="2"
                                android:background="@color/yellow"
                                android:layout_gravity="center_horizontal"/>

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1.5"
                                android:contentDescription="@string/loading"
                                android:src="@drawable/ic_map_to"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="3.4"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:weightSum="3">

                            <TextView
                                android:id="@+id/textHomeLocation"
                                android:layout_width="match_parent"
                                android:layout_weight="1.45"
                                android:gravity="center_vertical"
                                android:layout_height="0dp"
                                android:textSize="@dimen/main_header"
                                android:text="@string/select_home_location"
                                android:maxLines="2"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/colorAccent"/>

                            <TextView
                                android:id="@+id/textOfficeLocation"
                                android:layout_width="match_parent"
                                android:layout_weight="1.45"
                                android:gravity="center_vertical"
                                android:maxLines="2"
                                android:layout_height="0dp"
                                android:textSize="@dimen/main_header"
                                android:text="@string/select_office_location"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight=".8"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/closeLocationLayout"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:scaleType="centerInside"
                                android:layout_gravity="end|top"
                                android:layout_marginEnd="5dp"
                                android:layout_marginTop="5dp"
                                android:contentDescription="@string/loading"
                                android:src="@drawable/close"/>

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:scaleType="centerInside"
                                android:contentDescription="@string/loading"
                                android:layout_gravity="center_vertical"
                                />
                            <!--android:src="@drawable/ic_switch"-->
                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/findRouteButton"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".8"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="7dp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/main_header"
                        android:text="@string/find_a_route"
                        android:background="@drawable/button_rectangle_sign_up"/>

                </LinearLayout>

            </RelativeLayout>
            

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />-->

        </FrameLayout>

        <!--<FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>-->

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/main_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:itemTextColor="@color/black"
        app:itemIconTint="@color/yellow"
        app:menu="@menu/menu_drawer" />

</android.support.v4.widget.DrawerLayout>

<!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MapsActivity">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>-->
